Updated /v1/handlers_gsm.g,  models
