# internal/models/model_gsm.go
@@ -9,86 +9,68 @@ import (
 
 // idEntry represents the ID of the entry in the database.
 type IdEntry struct {
+	// ID of the entry in the database
 	ID int `json:"id" minimum:"1"`
 }
 
-// GsmTableEntry defines the structure for the entry in the GSM table
-type GsmTableEntry struct {
+// GsmEntryResponse defines the structure for the entry in the GSM table.
+type GsmEntryResponse struct {
 	// ID of the database entry
-	//
-	// required:false
-	// min:1
-	ID int `json:"id,omitempty" db:"id"`
-
+	ID int `json:"id,omitempty" db:"id" minimum:"1"`
 	// Fuel receiving date
-	//
-	// required: true
-	// example: 2024-01-02
-	DtReceiving pgtype.Date `json:"dt_receiving" db:"dt_receiving" validate:"required"` //     dt_receiving: datetime.date | str  # Data priemki
-
+	DtReceiving pgtype.Date `json:"dt_receiving" db:"dt_receiving" validate:"required" swaggertype:"string" format:"date" example:"2024-11-15"`
 	// Fuel receiving  date
-	//
-	// required: false
-	// example: 2025-01-02
-	DtCrch pgtype.Date `json:"dt_crch,omitempty" db:"dt_crch"` //     dt_crch: datetime.date | str  # Data sozdaniya ili posledney pravki
-
+	DtCrch pgtype.Date `json:"dt_crch,omitempty" db:"dt_crch" swaggertype:"string" format:"date" example:"2025-01-02"`
 	// Name of the mining site
-	//
-	// required: true
-	// example: Some Name
-	Site string `json:"site" db:"site" validate:"required"` //     site: str  # Uchastok
-
+	Site string `json:"site" db:"site" validate:"required" example:"Name of the mining site"`
 	// The amount of fuel received at the warehouse in kilograms
-	//
-	// required: true
-	// example: 362.20
-	IncomeKg float64 `json:"income_kg" db:"income_kg" validate:"required"` //     income_kg: float   # Prinyato v kg
-
+	IncomeKg float64 `json:"income_kg" db:"income_kg" validate:"required" example:"362.20"`
 	// Last name of the operator who took the fuel to the warehouse
-	//
-	// required: true
-	// example: Some Last name
-	Operator string `json:"operator" db:"operator" validate:"required"` //     operator: str  # Operator
-
+	Operator string `json:"operator" db:"operator" validate:"required" example:"Last name of the operator"`
 	// Name of the fuel provider
-	//
-	// required: true
-	// example: Some Name
-	Provider string `json:"provider" db:"provider" validate:"required"` //     provider: str  # Postavshik
-
+	Provider string `json:"provider" db:"provider" validate:"required" example:"Name of the fuel provider"`
 	// Name of the fuel carrier
-	//
-	// required: true
-	// example: Some Name
-	Contractor string `json:"contractor" db:"contractor" validate:"required"` //     contractor: str  # Perevozshik
-
+	Contractor string `json:"contractor" db:"contractor" validate:"required" example:"Name of the fuel carrier"`
 	// The state number of the transport that delivered the fuel
-	//
-	// required: true
-	// example: A902RUS
-	LicensePlate string `json:"license_plate" db:"license_plate" validate:"required"` //     license_plate: str   # GOS nomer
-
+	LicensePlate string `json:"license_plate" db:"license_plate" validate:"required" example:" A902RUS"`
 	// Fuel loading status
-	//
-	// required: true
-	// example: Uploaded
-	Status string `json:"status" db:"status" validate:"required"` //     status: str  # Zagruzgen
-
+	Status string `json:"status" db:"status" validate:"required"  example:"Uploaded"`
 	// The status of the fuel intake record in the database (changed or not)
-	//
-	// required: true
-	// example: false
-	BeenChanged bool `json:"been_changed" db:"been_changed"` //     been_changed: bool   # table_color = '#f7fcc5' = T
-
+	BeenChanged bool `json:"been_changed" db:"been_changed" example:"false"`
 	// The global unique identifier of the record
-	//
-	// required: true
-	// example: 6F9619FF-8B86-D011-B42D-00CF4FC964F
-	GUID string `json:"guid" db:"guid" validate:"required,uuid"`
+	GUID string `json:"guid" db:"guid" validate:"required,uuid" example:"6F9619FF-8B86-D011-B42D-00CF4FC964F"`
+}
+
+// GsmTableEntry
+type GsmeEntryRequest struct {
+	// ID of the database entry
+	ID int `json:"id,omitempty" db:"id" minimum:"1" swaggerignore:"true"`
+	// Fuel receiving date
+	DtReceiving pgtype.Date `json:"dt_receiving" db:"dt_receiving" validate:"required" swaggertype:"string" format:"date" example:"2024-11-15"`
+	// Fuel receiving  date
+	DtCrch pgtype.Date `json:"dt_crch,omitempty" db:"dt_crch" swaggertype:"string" format:"date" example:"2025-01-02"`
+	// Name of the mining site
+	Site string `json:"site" db:"site" validate:"required" example:"Name of the mining site"`
+	// The amount of fuel received at the warehouse in kilograms
+	IncomeKg float64 `json:"income_kg" db:"income_kg" validate:"required" example:"362.20"`
+	// Last name of the operator who took the fuel to the warehouse
+	Operator string `json:"operator" db:"operator" validate:"required" example:"Last name of the operator"`
+	// Name of the fuel provider
+	Provider string `json:"provider" db:"provider" validate:"required" example:"Name of the fuel provider"`
+	// Name of the fuel carrier
+	Contractor string `json:"contractor" db:"contractor" validate:"required" example:"Name of the fuel carrier"`
+	// The state number of the transport that delivered the fuel
+	LicensePlate string `json:"license_plate" db:"license_plate" validate:"required" example:" A902RUS"`
+	// Fuel loading status
+	Status string `json:"status" db:"status" validate:"required"  example:"Uploaded"`
+	// The status of the fuel intake record in the database (changed or not)
+	BeenChanged bool `json:"been_changed" db:"been_changed" example:"true"`
+	// The global unique identifier of the record
+	GUID string `json:"guid" db:"guid" validate:"required,uuid" example:"6F9619FF-8B86-D011-B42D-00CF4FC964F"`
 }
 
 // It's Stringer interface (https://pkg.go.dev/fmt@go1.24.0#Stringer).
-func (g GsmTableEntry) String() string {
+func (g GsmEntryResponse) String() string {
 	return fmt.Sprintf("{%d, %s, %s, %s, %.3f, %s, %s, %s, %s, %s, %v, %s}",
 		g.ID,
 		g.DtReceiving.Time.Format(time.DateOnly),
